--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,10 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+project.ext.vectoricons = [
+    iconFontNames: [ 'AntDesign.ttf', 'Entypo.ttf', 'EvilIcons.ttf', 'Feather.ttf', 'FontAwesome.ttf', 'FontAwesome5_Brands.ttf', 'FontAwesome5_Regular.ttf', 'FontAwesome5_Solid.ttf', 'Foundation.ttf', 'Ionicons.ttf', 'MaterialIcons.ttf', 'MaterialCommunityIcons.ttf', 'SimpleLineIcons.ttf', 'Octicons.ttf', 'Zocial.ttf' ] // Add or remove fonts based on your usage
+]
+
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -121,4 +125,8 @@ dependencies {
     implementation("com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.2") {
         exclude group: 'com.mapbox.mapboxsdk', module: 'mapbox-android-core'
     }
+
+    implementation project(':react-native-vector-icons')
 }
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
