--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rnmapbox/maps": "^10.1.31",
+    "native-base": "^3.4.28",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-error-boundary": "^1.2.5",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-reanimated": "^3.15.4",
+    "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
