--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rnmapbox/maps": "^10.1.31",
+    "axios": "^1.7.7",
     "native-base": "^3.4.28",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-error-boundary": "^1.2.5",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-reanimated": "^3.15.4",
